@@ -87,7 +87,7 @@ void OutputAlignmentMafIterator::writeBlock(std::ostream& out, const MafBlock& b
   vector<string> names(aln.getNumberOfSequences());
   for (size_t i = 0; i < aln.getNumberOfSequences(); ++i) {
     const MafSequence& mafseq = block.getSequence(i);
-    if (mafseq.hasCoordinates())
+    if (mafseq.hasCoordinates() && outputCoordinates_)
       names[i] = mafseq.getSpecies() + "-" + mafseq.getChromosome() + "(" + mafseq.getStrand() + ")/" + TextTools::toString(mafseq.start() + 1) + "-" + TextTools::toString(mafseq.stop() + 1);
     else
       names[i] = mafseq.getSpecies();
